[package]
name = "environment-loader"
version = "0.1.0"
edition = "2024"
authors = [
    "Samir Bioud <samir@induct.ie>",
    "Induct <info@induct.ie>",
]
license = "MIT OR Apache-2.0"
description = "Load environment variables from various external sources"
repository = "https://github.com/induct-ie/env-loader"
readme = "README.md"

[dependencies]
aws-config = "1.8.3"
aws-sdk-secretsmanager = "1.82.0"
clap = { version = "4.5.41", features = ["derive"] }
nix = { version = "0.30.1", features = ["process"] }
tokio = { version = "1.47.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
